<resources>
    <string name="app_name">ClonacionDeVoces</string>
    <string name="login_email_hint">Correo electronico</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="start_sesion">Inicio de sesión</string>
    <string name="login_btn_sign_in">Iniciar sesión</string>
    <string name="remember_password">Recordar</string>
    <string name="btn_create_hall">Crear sala de estudio</string>
    <string name="str_learning">APRENDER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_register_activitys">ACTIVIDADES REALIZADAS</string>
</resources>